# E2E_ws

./: README.md  frames_2025-05-19_21.19.03.gv
src/e2e_meta/: CMakeLists.txt  package.xml
src/e2e_meta/src/: CMakeLists.txt  package.xml
src/ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
src/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
src/turtlebot3_simulations-humble/turtlebot3_gazebo/launch/: turtlebot3_AICenter,launch.py
src/turtlebot3_simulations-humble/turtlebot3_gazebo/models/turtlebot3_burger_cam/: model.sdf
src/turtlebot3_simulations-humble/turtlebot3_gazebo/models/wall_test_model/: model.config  model.sdf
src/turtlebot3_simulations-humble/turtlebot3_gazebo/worlds/: AI_Center.world
src/yolo_ros/yolo_bringup/launch/: yolo.launch.py  yolov8.launch.py
