<?xml version="1.0"?>
<package format="3">
  <name>e2e_meta</name>
  <version>0.0.1</version>
  <description>Meta package for e2e_ws</description>

  <maintainer email="bob4587@naver.com">kimjunsuk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_aruco</exec_depend>
  <exec_depend>yolo_ros</exec_depend>
</package>
